kubernetes/class4/cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: config
        mountPath: "/etc/nginx/conf.d"
        readOnly: true
  volumes:
  - name: config
    configMap:
      name: nginx-test
